syntax = "proto3";

package memos.api.v2;

import "google/api/annotations.proto";

option go_package = "gen/api/v2";

service LinkService {
  rpc GetLinkMetadata(GetLinkMetadataRequest) returns (GetLinkMetadataResponse) {
    option (google.api.http) = {get: "/api/v2/link_metadata"};
  }
}

message GetLinkMetadataRequest {
  string link = 1;
}

message GetLinkMetadataResponse {
  LinkMetadata link_metadata = 1;
}

message LinkMetadata {
  string title = 1;
  string description = 2;
  string image = 3;
}
